<resources>
    <string name="app_name">ExperienceExchange</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="forgot_password">Forgot the passsword?</string>
    <string name="connection_error">Internet connection error!</string>
    <string name="server_error">Server error!</string>
    <string name="submit">submit</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="i_am_accepting_license_agreement">I\'am accepting license agreement</string>
    <string name="interests">Interests</string>
    <string name="ready">Ready!</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="birthday">Birthday</string>
    <string name="base_information">Base information:</string>
    <string name="social_activity">Social Activity:</string>
    <string name="karma">Karma</string>
    <string name="finished_courses">Finished courses</string>
    <string name="comments">Comments</string>
    <string name="created_courses">Created courses</string>
    <string name="total_likes">Total likes</string>
    <string name="home">Home</string>
    <string name="popular_authors">Popular authors</string>
    <string name="popular_themes">Popular themes</string>
    <string name="recommended_courses">Recommended courses</string>
    <string name="tell_us_what_you_like">Tell us what you like!</string>
    <string name="details">Details...</string>
    <string name="available_lessons">Available lessons</string>
    <string name="edit">Edit</string>
    <string name="your_interests">Your interests:</string>
    <string name="about_me">About me:</string>
    <string name="lesson_number">Lesson №</string>
    <string name="lesson_name">Lesson name</string>
    <string name="add_block">ADD BLOCK</string>
    <string name="done">DONE</string>
    <string name="text">Text</string>
    <string name="create_course">CREATE COURSE</string>
    <string name="oops_looks_like_you_don_t_have_your_own_courses_right_now">Oops! Looks like you don\'t have your own courses right now!</string>
    <string name="choose_block_type">CHOOSE BLOCK TYPE</string>
    <string name="text_block">Text block</string>
    <string name="video_block">Video block</string>
    <string name="image_block">Image block</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="choose_image">CHOOSE IMAGE</string>
    <string name="image_was_not_chosen">Image was not chosen</string>
    <string name="please_try_again">Please, try again</string>
    <string name="course_creating">Course creating</string>
    <string name="course_name">Course name</string>
    <string name="course_brief_description">Course brief description</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="add_lesson">Add lesson</string>
    <string name="name">Name</string>
    <string name="my_courses">My courses</string>
    <string name="theme">Theme:</string>
</resources>
