<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/home"
        app:titleTextColor="@color/white_text"/>

    <com.example.ruslanio.experienceexchange.utils.views.TypefaceTextView
        style="@style/Label.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular_authors"
        android:textSize="@dimen/extra_medium_text_size"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_home_popular_authors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.example.ruslanio.experienceexchange.utils.views.TypefaceTextView
        style="@style/Label.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular_themes"
        android:textSize="@dimen/extra_medium_text_size"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_home_popular_themes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.example.ruslanio.experienceexchange.utils.views.TypefaceTextView
        style="@style/Label.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recommended_courses"
        android:textSize="@dimen/extra_medium_text_size"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_home_recomended_courses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>