<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ruslanio.experienceexchange.views.ChoiceView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ready"
            style="@style/Button.Flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ready"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"/>
    </LinearLayout>

    <com.example.ruslanio.experienceexchange.utils.views.TypefaceTextView
        style="@style/Label.Accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/interests"/>
    <com.example.ruslanio.experienceexchange.utils.views.TypefaceTextView
        style="@style/Label.Secondary"
        android:textSize="@dimen/medium_text_size"
        android:text="@string/tell_us_what_you_like"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <FrameLayout
        android:id="@+id/container_bubble_picker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
