<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/course_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <com.example.ruslanio.experienceexchange.utils.views.TypefaceTextView
              android:layout_width="wrap_content"
              style="@style/Label.White"
              android:layout_centerVertical="true"
              android:textSize="@dimen/large_text_size"
              android:text="@string/course_creating"
              android:layout_height="wrap_content"/>

          <ImageButton
              android:id="@+id/ibtn_course_done"
              android:layout_margin="@dimen/medium_margin"
              android:layout_centerVertical="true"
              android:background="@color/transparent"
              android:src="@drawable/ic_arrow_forward"
              android:layout_alignParentRight="true"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
      </RelativeLayout>



    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_margin="@dimen/medium_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="@dimen/medium_padding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.ruslanio.experienceexchange.utils.views.TypefaceTextView
                android:layout_width="match_parent"
                style="@style/Label.Bold"
                android:textSize="@dimen/large_text_size"
                android:text="@string/base_information"
                android:layout_height="wrap_content"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_course_name"
                    style="@style/Input.SingleLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/course_name"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_course_description"
                    style="@style/Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/course_brief_description"
                    android:imeActionId="@+id/et_course_name"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_course_add_image"
                style="@style/Button.Flat"
                android:text="@string/add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>




        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_course_lessons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_course_add_lesson"
        android:layout_margin="@dimen/medium_margin"
        style="@style/Button"
        android:text="@string/add_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>